--- a/org.epic.lib/.classpath
+++ b/org.epic.lib/.classpath
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/brazil_mini.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gnu-regexp-1.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdom-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/antlr-2.7.5.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-11.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/servlet-api-2.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-continuation-7.6.2.v20120308.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-http-7.6.2.v20120308.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-io-7.6.2.v20120308.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-server-7.6.2.v20120308.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-servlet-7.6.2.v20120308.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-util-7.6.2.v20120308.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-xml-7.6.2.v20120308.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
